# natten-mlx

./: .gitignore  BACKEND_SYNTHESIS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: backend-matrix.yml  ci.yml  release-pypi.yml  release-testpypi.yml  upstream-parity.yml
benchmarks/: backend-smoke.json  backend_smoke.py  backward-guardrail.json  backward_perf_guardrail.py  final-perf.json  final-perf.md  final_perf_table.py  forward-guardrail.json  forward_dtype_routing.py  forward_perf_guardrail.py  forward_tuner.py  nanobind-backward-tuning-pass.json  nanobind-tuning.json  nanobind-vs-fast-backward-3d-fused-check.json  nanobind-vs-fast-backward-3d-split-check.json  nanobind-vs-fast-backward-3d-split-tiled-check.json  nanobind-vs-fast-backward-3d-split-tiled-tg256-check.json  nanobind-vs-fast-backward-baseline.json  nanobind-vs-fast-backward-next-pass.json  nanobind-vs-fast-backward-step2-auto-final.json  nanobind-vs-fast-backward-step2-auto-v2.json  nanobind-vs-fast-backward-step2-auto-v3.json  nanobind-vs-fast-backward-step2-auto.json  nanobind-vs-fast-backward-step2.json  nanobind-vs-fast-backward-tiled-forced.json  nanobind-vs-fast-backward-verify.json  nanobind-vs-fast-next-pass.json  nanobind-vs-fast-next-pass2-pre-tune.json  nanobind-vs-fast-next-pass2.json  nanobind-vs-fast-next-pass3.json  nanobind-vs-fast-next-pass4.json  nanobind-vs-fast-next-pass5.json  nanobind-vs-fast-next-pass6.json  nanobind-vs-fast-next-pass7.json  nanobind-vs-fast.json  nanobind_backward_tuner.py  nanobind_split_av_probe.py  nanobind_tuner.py  nanobind_vs_fast_backward_compare.py  nanobind_vs_fast_compare.py
src/natten_mlx/: __init__.py  functional.py  merge.py  support_matrix.py
src/natten_mlx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/natten_mlx/_core/: __init__.py  _forward_tuning.py  _metal_sources.py  _nanobind_bwd_tuning.py  _nanobind_ext.cpp  _nanobind_impl.py  _nanobind_metal.py  _nanobind_tuning.py  fast_metal.py  libnanobind-mlx.dylib  nanobind.py  ops.py  pure.py
src/natten_mlx/_core/nanobind/: metal_runtime.cpp  metal_runtime.h  na1d_bwd_primitive.cpp  na1d_bwd_primitive.h  na1d_primitive.cpp  na1d_primitive.h  na2d_bwd_primitive.cpp  na2d_bwd_primitive.h  na2d_primitive.cpp  na2d_primitive.h  na2d_split_primitive.cpp  na2d_split_primitive.h  na3d_bwd_primitive.cpp  na3d_bwd_primitive.h  na3d_primitive.cpp  na3d_primitive.h  na_composed.cpp  na_composed.h  na_fused_backward.cpp  na_fused_backward.h  na_fused_forward.cpp  na_fused_forward.h  na_split_backward.cpp  na_split_backward.h  na_split_forward.cpp  na_split_forward.h  natten_nb_1d_v2.metal  natten_nb_2d_v2.metal  natten_nb_3d_v2.metal  natten_nb_fused.metal  natten_nb_split.metal  py_dispatch.h  window_semantics.cpp  window_semantics.h
src/natten_mlx/autograd/: __init__.py  na1d.py  na2d.py  na3d.py  split.py
src/natten_mlx/compat/: __init__.py  v014.py  v015.py  v017.py  v020.py
src/natten_mlx/extras/allin1/: __init__.py  functional.py  functional_metal.py  kernels.py  reference_impl.py
src/natten_mlx/nn/: na1d.py  na2d.py  na3d.py
src/natten_mlx/utils/: __init__.py  params.py  window.py
tests/: test_autograd.py  test_backend_matrix.py  test_backends.py  test_backward_parity.py  test_compat_for_version.py  test_compat_gradients.py  test_compat_v014.py  test_compat_v015.py  test_compat_v017.py  test_compat_v020.py  test_extras_allin1.py  test_fast_metal_3d_split.py  test_fast_metal_backward_no_fallback.py  test_fast_metal_fused_expanded.py  test_fast_metal_lowp_routing.py  test_fast_metal_split_expanded.py  test_functional.py  test_functional_3d.py  test_functional_3d_expanded.py  test_fused_simd.py  test_gradcheck_functional.py  test_low_precision_backend_parity.py  test_na1d.py  test_na2d.py  test_na3d.py  test_nanobind_extension.py  test_nanobind_fused_backward_dispatch.py  test_nanobind_fused_dispatch.py  test_nanobind_split_v2_dispatch.py  test_new_features.py  test_nn_module_grad.py  test_shift_semantics.py  test_split_ops_grad.py  test_support_matrix.py  test_upstream_parity.py  test_validation_errors.py  test_varlen_na1d.py  test_varlen_na2d.py  test_varlen_na3d.py
