[build-system]
requires = ["setuptools>=68.0", "wheel", "nanobind>=2.10.2,<2.11", "cmake>=3.27"]
build-backend = "setuptools.build_meta"

[project]
name = "natten-mlx"
dynamic = ["version"]
description = "Neighborhood Attention for Apple Silicon - MLX backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.10.0",
    "packaging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest"]
nanobind = ["nanobind>=2.10.2,<2.11"]

[tool.setuptools.dynamic]
version = {attr = "natten_mlx.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
